:bug: Visual bug on contrast
.

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -31,7 +31,7 @@ html {
   color: #a1a1a1;
 }
 .description {
-  color: #bebebe;
+  color: #a7a7a7;
 }
 
 .card-description {
